--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/dbacademica
-spring.datasource.username=user_apidos
-spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jackson.serialization.fail-on-unwrapped-type-identifiers=false
 logging.level.org.hibernate= ERROR
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
